Fix stretched images on teams and mission page

--- a/static/Styles/team.css
+++ b/static/Styles/team.css
@@ -36,9 +36,11 @@
     letter-spacing: 2px;
     margin-bottom: 40px;
     color: var(--color-mcc-blue);
+    flex-grow: 1;
 }
 
 .narrowTextDiv{
+    box-sizing: border-box;
     padding: 40px;
 }
 
@@ -63,6 +65,7 @@
 
     .squareImg{
         width: 50%;
+        aspect-ratio: 1/1;
     }
 
     .cover{
@@ -70,12 +73,14 @@
     }
 
     .narrowTextDiv{
-        width: calc(50% - 80px);
+        width: 50%;
+        display: flex;
+        flex-direction: column;
     }
 
     .boxImageHeader{
         line-height: 60px;
-        margin-top: 25%;
+        margin-top: 0;
         margin-bottom: 10%;
     }
 }
@@ -88,10 +93,11 @@
     .boxImageSlogan{
         font-size: 14px;
         line-height: 25px;
+        margin: 0;
+        flex-grow: 1;
     }
 
     .narrowTextDiv{
-        padding: 80px;
-        width: calc(50% - 160px);
+        padding: 5%;
     }
 }
